--- a/package.json
+++ b/package.json
@@ -21,16 +21,18 @@
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.3",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.547.0",
+    "lucide-react": "^0.554.0",
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.4",
     "next": "^15.0.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
